--- a/clusters/sandbox/kustomization.yaml
+++ b/clusters/sandbox/kustomization.yaml
@@ -2,7 +2,7 @@ apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 resources:
   # Platform resources (namespaces, RBAC, storage, ingress defaults)
-  # - ../../../platform
+  - ../../platform
 
   # Big Bang platform bundle (uncomment when ready)
   # - ../../../bigbang
